--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Welcome to Joe's website!</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<iframe width="560" height="315" src="file:///Users/Joe/Documents/r_projects/2016_election/election_map.html" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
