--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Welcome to Joe's website!</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<iframe width="560" height="315" src="file:///Users/Joe/Documents/r_projects/2016_election/election_map.html" frameborder="0" allowfullscreen></iframe>
+<iframe seamless src = "Users/Joe/Documents/r_projects/2016_election/election_map.html" width="100%" height="500"></iframe>
 </body>
 </html>
