--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Welcome to Joe's website!</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<iframe seamless src = "/Users/Joe/Documents/r_projects/2016_election/election_map/index.html" width="100%" height="500"></iframe>
+<iframe seamless src = "https://github.com/joestoica/2016-Presidential-Election-Analysis/blob/master/election_map.html" width="100%" height="500"></iframe>
 </body>
 </html>
