--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
+
+
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Welcome to Joe's website!</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<iframe seamless src = "https://github.com/joestoica/2016-Presidential-Election-Analysis/blob/master/election_map.html" width="100%" height="500"></iframe>
-</body>
+
+  <head>
+    <title> Joe Stoica</title>
+  </head>
+
+  <body>
+    <h1>Welcome</h1>
+
+    <div>
+			<p>
+      This page will eventually be much cooler!
+      </p>
+    </div>
+  <p>
+    Eventually I'll have a cool map widget.
+    </p>
+  </body>
 </html>
+
+<!--<iframe seamless src = "https://github.com/joestoica/2016-Presidential-Election-Analysis/blob/master/election_map.html" width="100%" height="500"></iframe> --->
