Added Resume, text changes.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">Portfolio</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -53,7 +53,7 @@
 										<h2>Welcome!</h2>
 										<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Computer Science, Biology, and Mathematics.<br /></p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p></p>
 								</div>
 							</section>
 
@@ -63,12 +63,12 @@
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
+										<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/Rosvall"> Rosvall Lab Volunteer </a></li>
+										<li class="fa-book">Undergraduate Teaching Instructor for Indiana University Biology Department</li>
+										<li class="fa-music">Guitar player and vinyl enthusiast</li>
+										<li class="fa-bolt">Arduino, Raspberry Pi, and 3D printing tinkerer </li>
+										<li class="fa-bicycle">Cyclist and rock climber</li>
 									</ul>
 								</div>
 							</section>
@@ -108,7 +108,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>If you have any questions or would like more information, please don't hesitate to reach out!</p>
+									<p>If you would like to see my resume, <a href="https://github.com/joestoica/joestoica.github.io/blob/master/resume.pdf"> click here. </a>
+										<br>If you have any questions or would like more information, please don't hesitate to reach out!</p>
 									<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
