Finished projects. Updated resume and added cv.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Facts About Me</h3>
+									<p></p>
 									<ul class="feature-icons">
 										<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
 										<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/Rosvall"> Rosvall Lab Volunteer </a></li>
@@ -76,23 +76,24 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Projects</h3>
+									<p>Listed below are some of the projects that I am currently interested in. </p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/joestoica/2016-Presidential-Election-Analysis" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Mapping the 2016 Presidential Election </h4>
+												<p>This project taught me how to create interactive maps in R using the 2016 United States presidential election as a data set. I hope to implement the interactive version of this map on this page and analyze some actual population metrics soon!</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Coming Soon!</h4>
+												<p> I am currently in the process of building a miniature midi Arduino keyboard. The creation will be documented and updated here as the project progresses!</p>
 											</div>
 										</article>
+										<!--
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
@@ -100,6 +101,7 @@
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
+									-->
 									</div>
 								</div>
 							</section>
@@ -108,7 +110,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>If you would like to see my resume, <a href="https://github.com/joestoica/joestoica.github.io/blob/master/resume.pdf"> click here. </a>
+									<p>If you would like to see my resume, click <a href="https://github.com/joestoica/joestoica.github.io/blob/master/resume.pdf" type="application/pdf" /> here </a>.
+										My CV can be found by clicking <a href="https://github.com/joestoica/joestoica.github.io/blob/master/website_cv.pdf" > here. </a>
 										<br>If you have any questions or would like more information, please don't hesitate to reach out!</p>
 									<form method="post" action="#">
 										<div class="row uniform">
