Finished for the assignment, just need new avatar.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Joe Stoica</a></h1>
-					<p>Statistics Student, Future Computer Scientist, and Prospective Data Analyst </p>
+					<p>Statistics Student, Prospective Data Scientist, Coffee Enthusiast </p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Skills</a></li>
+						<li><a href="#one" class="active">Objective</a></li>
+						<li><a href="#two">About Me</a></li>
 						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
@@ -34,7 +34,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/Joe_Stoica" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.instagram.com/joe_stoica/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 						<li><a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
@@ -51,7 +51,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>Welcome!</h2>
-										<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Computer Science, Biology, and Mathematics.<br /></p>
+										<p>I am a dedicated and motivated student seeking an internship to further
+											 progress my skills and gain real-world experience in the field of statistics and data science.
+											<br /></p>
 									</header>
 									<p></p>
 								</div>
@@ -60,8 +62,8 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Facts About Me</h3>
-									<p></p>
+									<h3>About Me</h3>
+									<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Computer Science, Biology, and Mathematics.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
 										<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/Rosvall"> Rosvall Lab Volunteer </a></li>
@@ -112,7 +114,8 @@
 									<h3>Contact Me</h3>
 									<p>If you would like to see my resume, click <a href="https://github.com/joestoica/joestoica.github.io/blob/master/resume.pdf" type="application/pdf" /> here </a>.
 										My CV can be found by clicking <a href="https://github.com/joestoica/joestoica.github.io/blob/master/website_cv.pdf" > here. </a>
-										<br>If you have any questions or would like more information, please don't hesitate to reach out!</p>
+										<br>If you would like more information, please don't hesitate to email me at joe.stoica@gmail.com!</p>
+<!--
 									<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -133,6 +136,7 @@
 											</div>
 										</div>
 									</form>
+								-->
 								</div>
 							</section>
 
