--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
 												<p> I am currently in the process of building a miniature midi Arduino keyboard. The creation will be documented and updated here as the project progresses!</p>
 											</div>
 										</article>
-										<!--
+										<
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Paper Circuits Reflection</h4>
+												<p>You can read about my paper circuits by going <a href="https://github.com/joestoica/joestoica.github.io/blob/master/Reflection.pdf" > here</a></p>
 											</div>
 										</article>
-									-->
+
 									</div>
 								</div>
 							</section>
