--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>If you would like to see my resume, click <a href="https://github.com/joestoica/joestoica.github.io/blob/master/resume.pdf" type="application/pdf" /> here </a>.
-										My CV can be found by clicking <a href="https://github.com/joestoica/joestoica.github.io/blob/master/website_cv.pdf" > here. </a>
+									<p>If you would like to see my resume, click <a href="./resume.pdf"> here </a>.
+										My CV can be found by clicking <a href="./website_cv.pdf"> here. </a>
 										<br>If you would like more information, please don't hesitate to email me at joe.stoica@gmail.com!</p>
 <!--
 									<form method="post" action="#">
