Added pages for each project. Typo Fixes.

--- a/index.html
+++ b/index.html
@@ -5,118 +5,117 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Joe Stoica</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Joe Stoica</a></h1>
-					<p>Statistics Student, Prospective Data Scientist, Coffee Enthusiast </p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">Objective</a></li>
-						<li><a href="#two">About Me</a></li>
-						<li><a href="#three">Projects</a></li>
-						<li><a href="#four">Contact</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://twitter.com/Joe_Stoica" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/joe_stoica/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-						<li><a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a></li>
-					</ul>
-				</footer>
+<head>
+	<title>Joe Stoica</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+
+<body>
+
+	<!-- Header -->
+	<section id="header">
+		<header>
+			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+			<h1 id="logo"><a href="#">Joe Stoica</a></h1>
+			<p>Statistics Student <br> Prospective Data Scientist </p>
+		</header>
+		<nav id="nav">
+			<ul>
+				<li><a href="#one" class="active">Objective</a></li>
+				<li><a href="#two">About Me</a></li>
+				<li><a href="#three">Projects</a></li>
+				<li><a href="#four">Contact</a></li>
+			</ul>
+		</nav>
+		<footer>
+			<ul class="icons">
+				<li><a href="https://twitter.com/Joe_Stoica" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.instagram.com/joe_stoica/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+				<li><a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a></li>
+			</ul>
+		</footer>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- One -->
+			<section id="one">
+				<div class="container">
+					<header class="major">
+						<h2>Welcome!</h2>
+						<p>I am a dedicated and motivated student seeking an internship to further progress my skills and gain real-world experience in the field of statistics and data science.
+							<br /></p>
+					</header>
+					<p></p>
+				</div>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<!-- Two -->
+			<section id="two">
+				<div class="container">
+					<h3>About Me</h3>
+					<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Computer Science, Biology, and Mathematics.</p>
+					<ul class="feature-icons">
+						<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
+						<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/Rosvall"> Rosvall Lab Volunteer </a></li>
+						<li class="fa-book">Undergraduate Teaching Instructor for Indiana University Biology Department</li>
+						<li class="fa-music">Guitar player and vinyl enthusiast</li>
+						<li class="fa-bolt">Arduino, Raspberry Pi, and 3D printing tinkerer </li>
+						<li class="fa-bicycle">Cyclist and rock climber</li>
+					</ul>
+				</div>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
+			<!-- Three -->
+			<section id="three">
+				<div class="container">
+					<h3>Projects</h3>
+					<p>Listed below are some of the projects that I am currently working on. </p>
+					<div class="features">
+						<article>
+							<a href="./2016_elect.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+							<div class="inner">
+								<h4>Mapping the 2016 Presidential Election </h4>
+								<p>This project taught me how to create interactive maps in R using the 2016 United States presidential election as a data set. I hope to implement the interactive version of this map on this page and analyze some actual population metrics soon!</p>
+							</div>
+						</article>
+						<article>
+							<a href="./midi.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+							<div class="inner">
+								<h4>Mini Midi Madness</h4>
+								<p> I am currently in the process of building a miniature midi Arduino keyboard. The creation will be documented and updated here as the project progresses!</p>
+							</div>
+						</article>
+						<article>
+							<a href="./paper_circuit.html" class="image"><img src="images/p2.jpg" alt="" /></a>
+							<div class="inner">
+								<h4>Paper Circuits</h4>
+								<p>A great little classroom activity about learning the basics of circuitry.</p>
+							</div>
+						</article>
 
-						<!-- One -->
-							<section id="one">
-								<div class="container">
-									<header class="major">
-										<h2>Welcome!</h2>
-										<p>I am a dedicated and motivated student seeking an internship to further
-											 progress my skills and gain real-world experience in the field of statistics and data science.
-											<br /></p>
-									</header>
-									<p></p>
-								</div>
-							</section>
+					</div>
+				</div>
+			</section>
 
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3>About Me</h3>
-									<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Computer Science, Biology, and Mathematics.</p>
-									<ul class="feature-icons">
-										<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
-										<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/Rosvall"> Rosvall Lab Volunteer </a></li>
-										<li class="fa-book">Undergraduate Teaching Instructor for Indiana University Biology Department</li>
-										<li class="fa-music">Guitar player and vinyl enthusiast</li>
-										<li class="fa-bolt">Arduino, Raspberry Pi, and 3D printing tinkerer </li>
-										<li class="fa-bicycle">Cyclist and rock climber</li>
-									</ul>
-								</div>
-							</section>
+			<!-- Four -->
+			<section id="four">
+				<div class="container">
+					<h3>Contact Me</h3>
+					<p>If you would like to see my resume, click <a href="./resume.pdf"> here </a>. My CV can be found by clicking <a href="./website_cv.pdf"> here. </a>
+						<br>If you would like more information, please don't hesitate to email me at joe.stoica@gmail.com!</p>
 
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Projects</h3>
-									<p>Listed below are some of the projects that I am currently interested in. </p>
-									<div class="features">
-										<article>
-											<a href="https://github.com/joestoica/2016-Presidential-Election-Analysis" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Mapping the 2016 Presidential Election </h4>
-												<p>This project taught me how to create interactive maps in R using the 2016 United States presidential election as a data set. I hope to implement the interactive version of this map on this page and analyze some actual population metrics soon!</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Coming Soon!</h4>
-												<p> I am currently in the process of building a miniature midi Arduino keyboard. The creation will be documented and updated here as the project progresses!</p>
-											</div>
-										</article>
-										<
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Paper Circuits Reflection</h4>
-												<p>You can read about my paper circuits by going <a href="https://github.com/joestoica/joestoica.github.io/blob/master/Reflection.pdf" > here</a></p>
-											</div>
-										</article>
-
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>If you would like to see my resume, click <a href="./resume.pdf"> here </a>.
-										My CV can be found by clicking <a href="./website_cv.pdf"> here. </a>
-										<br>If you would like more information, please don't hesitate to email me at joe.stoica@gmail.com!</p>
-<!--
-									<form method="post" action="#">
+					<!--<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -136,12 +135,12 @@
 											</div>
 										</div>
 									</form>
-								-->
+
 								</div>
 							</section>
-
-						<!-- Five -->
-						<!--
+-->
+					<!-- Five -->
+					<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -487,7 +486,7 @@
 							</section>
 						-->
 
-					</div>
+				</div>
 
 				<!-- Footer
 					<section id="footer">
@@ -499,16 +498,17 @@
 					</section>
 					-->
 
-			</div>
+		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollzer.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
