--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 								<p>This project taught me how to create interactive maps in R using the 2016 United States presidential election as a data set. I hope to implement the interactive version of this map on this page and analyze some actual population metrics soon!</p>
 							</div>
 						</article>
+
 						<article>
 							<a href="./midi.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 							<div class="inner">
@@ -96,8 +97,9 @@
 								<p> I am currently in the process of building a miniature midi Arduino keyboard. The creation will be documented and updated here as the project progresses!</p>
 							</div>
 						</article>
+
 						<article>
-							<a href="./paper_circuit.html" class="image"><img src="images/p2.jpg" alt="" /></a>
+							<a href="./paper_circuit.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 							<div class="inner">
 								<h4>Paper Circuits</h4>
 								<p>A great little classroom activity about learning the basics of circuitry.</p>
