--- a/midi.html
+++ b/midi.html
@@ -55,7 +55,7 @@
             <p>3D Printing and Designing a Piano Key</p>
           </header>
           <p class="tab"> Now that the circuit is finished, it is time to actually start constructing the piano! Our first print of the key looks like this: </p>
-          <a href="#" class="image"><img  src="images/key1.jpg" height = 378 width = 507 /> </a>
+          <a href="#" class="image"><img  src="images/pic02.jpg" height = 378 width = 507 /> </a>
           <p class="tab">The first pin is where the key will touch down on the copper tape to complete the circuit, and the second pin will be where the spring rests to control the action of the key. The hole in the back will be used as the pivoting mechanism for the
             key to move down. But, after printing this key, we already had some different design ideas. First, we will shorten the key to cut down on print time and the amount of materials used. Second, we plan on switching the spring pin and the touch
             pin to allow for more leverage on the spring and more room for the circuit to operate.
