Hopefully fixed pictures.

--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
 					<h3>Projects</h3>
 					<p>Listed below are some of the projects that I am currently working on. </p>
 					<div class="features">
+
 						<article>
 							<a href="./2016_elect.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 							<div class="inner">
 								<h4>Mapping the 2016 Presidential Election </h4>
-								<p>This project taught me how to create interactive maps in R using the 2016 United States presidential election as a data set. I hope to implement the interactive version of this map on this page and analyze some actual population metrics soon!</p>
+								<p>Examining the election through mapping and other analysis</p>
 							</div>
 						</article>
 
@@ -99,10 +100,10 @@
 						</article>
 
 						<article>
-							<a href="./paper_circuit.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="./paper_circuit.html" class="image"><img src="images/p2.JPG" alt="" /></a>
 							<div class="inner">
 								<h4>Paper Circuits</h4>
-								<p>A great little classroom activity about learning the basics of circuitry.</p>
+								<p>A great classroom activity about learning the basics of circuitry.</p>
 							</div>
 						</article>
 
