--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -63,11 +63,11 @@
             <p>Your First Paper Circuits</p>
           </header>
           <p class="tab"> The easiest circuit to build is a simple circuit to illuminate an LED, which is shown below</p><br><br>
-          <a href="#" class="image rotate90"><img src="images/p1.jpg" height = 378 width = 507 /> </a>. <br><br><br><br>
+          <a href="#" class="image rotate90"><img src="images/p1.JPG" height = 378 width = 507 /> </a>. <br><br><br><br>
           <p class="tab"> Only two strips of copper tape are needed, and soldering an LED will link the two strips together. When it comes to creating turns in the strip, the tape should be folded over itself and never cut. If it is cut, the circuit will break. Also,
-            it is important to note that the negative end of the battery and negative part of the LED must align or else the circuit will not work. There are many other types of simple circuits to be designed, such as a a circuit with a <a href="images/p2.jpg">switch,</a>            a <a href="images/p4.jpg">button,</a>
-            <a href="images/p3.jpg">a circuit in parallel,</a> and even a
-            <a href="images/p5.jpg">circuit with a pull tab.</a> </p>
+            it is important to note that the negative end of the battery and negative part of the LED must align or else the circuit will not work. There are many other types of simple circuits to be designed, such as a a circuit with a <a href="images/p2.JPG">switch,</a>            a <a href="images/p4.JPG">button,</a>
+            <a href="images/p3.JPG">a circuit in parallel,</a> and even a
+            <a href="images/p5.JPG">circuit with a pull tab.</a> </p>
 
 
           <p class="tab"> Paper circuits can come with a few surprising difficulties. Aesthetically, laying down copper tape in a straight line can be difficult, especially if the tape has multiple kinks. A badly placed strip might cause a whole page to be scrapped.
