Fixed broken link.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Computer Science, Biology, and Mathematics.</p>
 					<ul class="feature-icons">
 						<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
-						<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/Rosvall"> Rosvall Lab Volunteer </a></li>
+						<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/"> Rosvall Lab Volunteer </a></li>
 						<li class="fa-book">Undergraduate Teaching Instructor for Indiana University Biology Department</li>
 						<li class="fa-music">Guitar player and vinyl enthusiast</li>
 						<li class="fa-bolt">Arduino, Raspberry Pi, and 3D printing tinkerer </li>
