Added new arduino.

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 						<article>
 							<a href="./paper_circuit.html" class="image"><img src="images/p2.JPG" alt="" /></a>
 							<div class="inner">
-								<h4>Paper Circuits</h4>
-								<p>A great classroom activity about learning the basics of circuitry.</p>
+								<h4>Electronics in the Classroom</h4>
+								<p>A collection of great classroom activities about learning the basics of circuitry and electronics.</p>
 							</div>
 						</article>
 
