--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -83,6 +83,23 @@
         </div>
       </section>
 
+      <section id="three">
+        <div class="container">
+          <header class="major">
+            <h2>Four LEDs and a buzzer</h2>
+            <p> Entry-level Arduino tasks </p>
+          </header>
+          <p>This assignment helped me learn how to use the serial monitor ensure that certain chunks of code are being read. Each time an LED would light up, the serial monitor would output the message I wanted it to output. Overall, this was a good way
+            to reiterate arduino basics.</p>
+          <p class="tab"> <a href="https://www.youtube.com/watch?v=60BdliG5Qw8">Here</a> is a demo of the circuit.</p>
+          <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/ardublock.png" height = 378 width = 507 /> </a>
+            <a href="#" class="image"><img  src="images/ardublock1.jpeg " height = 378 width = 507 /> </a> </p>
+          <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/fritz.jpg" height = 378 width = 507 /> </a> </p>
+          <p> The arduino code can be found<a href="https://github.com/joestoica/joestoica.github.io/"> here. </a> </p>
+          </p>
+        </div>
+      </section>
+
       <!-- Scripts -->
       <script src="assets/js/jquery.min.js"></script>
       <script src="assets/js/jquery.scrollzer.min.js"></script>
