--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -20,7 +20,9 @@
     <nav id="nav">
       <ul>
         <li><a href="#one" class="active">Introduction</a></li>
-        <li><a href="#two"> Going Further </a></li>
+        <li><a href="#two"> Going Further With Circuits </a></li>
+        <li><a href="#three">LEDs and Arduino</a></li>
+        <li><a href="#three">LEDs and Arduino Revisited</a></li>
       </ul>
     </nav>
     <footer>
@@ -95,7 +97,23 @@
           <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/ardublock.png" height = 378 width = 507 /> </a>
             <a href="#" class="image"><img  src="images/ardublock1.jpeg " height = 378 width = 507 /> </a> </p>
           <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/fritz.jpg" height = 378 width = 507 /> </a> </p>
-          <p> The arduino code can be found <a href="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/267905_122348814518233_6054468_n.jpg?oh=61825807621727e4b94959463dd563f9&oe=5ADD19EB"> here. </a> </p>
+          <p> The arduino code can be found <a href="https://github.com/joestoica/joestoica.github.io/blob/master/4_led.ino"> here. </a> </p>
+          </p>
+        </div>
+      </section>
+
+      <section id="three">
+        <div class="container">
+          <header class="major">
+            <h2>Lighting up LEDs with a button and light sensor</h2>
+            <p> Entry-level Arduino tasks </p>
+          </header>
+          <p>This assignment was to create a circuit that would light up an LED when either a button was pressed, or when the light sensor detected darkness. This is fairly straightforward, however I did run into issues with the power connection from the
+            light sensor to the Lilypad. It is important to note for future reference that the "S" on the light sensor must connect to the "+" on the Lilypad to ensure a properly working sensor.</p>
+          <p class="tab"> <a href="https://www.youtube.com/watch?v=auFzIeGpETo&feature=youtu.be">Here</a> is a demo of the circuit.</p>
+          <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/input3.jpeg" height = 378 width = 507 /> </a>
+            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/imput3fritz.jepg" height = 378 width = 507 /> </a> </p>
+            <p> The arduino code can be found <a href="https://github.com/joestoica/joestoica.github.io/blob/master/light_sensor_button.ino"> here. </a> </p>
           </p>
         </div>
       </section>
