--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -111,8 +111,8 @@
           <p>This assignment was to create a circuit that would light up an LED when either a button was pressed, or when the light sensor detected darkness. This is fairly straightforward, however I did run into issues with the power connection from the
             light sensor to the Lilypad. It is important to note for future reference that the "S" on the light sensor must connect to the "+" on the Lilypad to ensure a properly working sensor.</p>
           <p class="tab"> <a href="https://www.youtube.com/watch?v=auFzIeGpETo&feature=youtu.be">Here</a> is a demo of the circuit.</p>
-          <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/input3.jpeg" height = 378 width = 507 /> </a>
-            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/imput3fritz.jepg" height = 378 width = 507 /> </a> </p>
+          <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/input3.jpg" height = 378 width = 507 /> </a>
+            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/imput3fritz.jpg" height = 378 width = 507 /> </a> </p>
             <p> The arduino code can be found <a href="https://github.com/joestoica/joestoica.github.io/blob/master/light_sensor_button.ino"> here. </a> </p>
           </p>
         </div>
