Okay now I fixed the images.

--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -91,7 +91,7 @@
             <h2>Four LEDs and a buzzer</h2>
             <p> Entry-level Arduino tasks </p>
           </header>
-          <p>This assignment helped me learn how to use the serial monitor ensure that certain chunks of code are being read. Each time an LED would light up, the serial monitor would output the message I wanted it to output, and then once all LEDs are lit
+          <p class="tab">This assignment helped me learn how to use the serial monitor ensure that certain chunks of code are being read. Each time an LED would light up, the serial monitor would output the message I wanted it to output, and then once all LEDs are lit
             a sound would play. Overall, this was a good way to reinforce arduino basics and good practices.</p>
           <p class="tab"> <a href="https://www.youtube.com/watch?v=60BdliG5Qw8">Here</a> is a demo of the circuit.</p>
           <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/ardublock.png" height = 378 width = 507 /> </a>
@@ -108,11 +108,11 @@
             <h2>Lighting up LEDs with a button and light sensor</h2>
             <p> Entry-level Arduino tasks </p>
           </header>
-          <p>This assignment was to create a circuit that would light up an LED when either a button was pressed, or when the light sensor detected darkness. This is fairly straightforward, however I did run into issues with the power connection from the
+          <p class="tab">This assignment was to create a circuit that would light up an LED when either a button was pressed, or when the light sensor detected darkness. This is fairly straightforward, however I did run into issues with the power connection from the
             light sensor to the Lilypad. It is important to note for future reference that the "S" on the light sensor must connect to the "+" on the Lilypad to ensure a properly working sensor.</p>
-          <p class="tab"> <a href="https://www.youtube.com/watch?v=auFzIeGpETo&feature=youtu.be">Here</a> is a demo of the circuit.</p>
+          <p> <a href="https://www.youtube.com/watch?v=auFzIeGpETo&feature=youtu.be">Here</a> is a demo of the circuit.</p>
           <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/input3.jpg" height = 378 width = 507 /> </a>
-            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/imput3fritz.jpg" height = 378 width = 507 /> </a> </p>
+            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/input3fritz.jpg" height = 378 width = 507 /> </a> </p>
             <p> The arduino code can be found <a href="https://github.com/joestoica/joestoica.github.io/blob/master/light_sensor_button.ino"> here. </a> </p>
           </p>
         </div>
