I'm so bad at github.

--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -22,7 +22,7 @@
         <li><a href="#one" class="active">Introduction</a></li>
         <li><a href="#two"> Going Further With Circuits </a></li>
         <li><a href="#three">LEDs and Arduino</a></li>
-        <li><a href="#three">LEDs and Arduino Revisited</a></li>
+        <li><a href="#four">LEDs and Arduino Revisited</a></li>
       </ul>
     </nav>
     <footer>
@@ -102,7 +102,7 @@
         </div>
       </section>
 
-      <section id="three">
+      <section id="four">
         <div class="container">
           <header class="major">
             <h2>Lighting up LEDs with a button and light sensor</h2>
@@ -112,7 +112,7 @@
             light sensor to the Lilypad. It is important to note for future reference that the "S" on the light sensor must connect to the "+" on the Lilypad to ensure a properly working sensor.</p>
           <p> <a href="https://www.youtube.com/watch?v=auFzIeGpETo&feature=youtu.be">Here</a> is a demo of the circuit.</p>
           <p> This is the ardublock for the LEDs and buzzer. <a href="#" class="image"><img  src="images/input3.jpg" height = 378 width = 507 /> </a>
-            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/input3fritz.jpg" height = 378 width = 507 /> </a> </p>
+            <p> This is the fritzing diagram. <a href="#" class="image"><img  src="images/fritz1.jpg" height = 378 width = 507 /> </a> </p>
             <p> The arduino code can be found <a href="https://github.com/joestoica/joestoica.github.io/blob/master/light_sensor_button.ino"> here. </a> </p>
           </p>
         </div>
